test/fail/integration/_fail_grammar_expr_not_1.hs
x :: Bool
x = not jl
main = print "hello"